# Multi-Lidar-calibration

./: CMakeLists.txt  LAUNCH_README.md  README.md  package.xml
config/: config copy.json  config.json  sensor_kit_calibration.yaml
doc/: lidar_calib.rviz
include/: check.h  mainwindow.h  rclcomm.h
launch/: lidar_calibration_verif.launch.py
resource/: images.qrc
src/: check.cpp  main.cpp  mainwindow.cpp  rclcomm.cpp
ui/: mainwindow.ui
